<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context="com.zkteco.bigboss.ui.activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/imag_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/login_button_margin"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="@dimen/login_imag_size"
            android:layout_height="@dimen/login_imag_size"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/imag_lift_margin"
            android:background="@drawable/imag_login_80"/>

        <EditText
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/imag_lift_margin"
            android:background="@null"
            android:hint="@string/account"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHintText"/>
    </LinearLayout>

    <View
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/imag_lift_margin"
        android:layout_marginRight="@dimen/imag_lift_margin"
        android:background="@color/colorBottom"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/login_imag_size"
            android:layout_height="@dimen/login_imag_size"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/imag_lift_margin"
            android:background="@drawable/imag_password_80"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/imag_lift_margin"
            android:background="@null"
            android:hint="@string/password"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHintText"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/imag_lift_margin"
        android:layout_marginRight="@dimen/imag_lift_margin"
        android:background="@color/colorBottom"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/imag_lift_margin"
        android:layout_marginRight="@dimen/imag_lift_margin"
        android:layout_marginTop="@dimen/login_button_margin"
        android:background="@drawable/shape"
        android:text="@string/login"
        android:textSize="24sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="@dimen/imag_lift_margin"
        android:layout_marginRight="@dimen/imag_lift_margin"
        android:layout_marginTop="@dimen/login_button_margin"
        >

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:text="@string/forget_password"
            android:textColor="@color/colorHintText"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:text="@string/register"
            android:textColor="@color/colorHintText"
            android:textSize="19sp"/>
    </RelativeLayout>
</LinearLayout>
